# dotenv

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: publish-to-test-pypi.yml
dotenv/: __init__.py  __main__.py
ndenv/: __init__.py  __main__.py
scripts/: ndenv
tests/: test_dotenv.py  test_ndenv.py
