[project]
name = "ndenv"
version = "0.0.7"
description = "Create a pyproject.toml file for an existing project."
authors = [
    "Mihaeil Savin <mail@jtprog.ru>"
]
license = "WTFPL"
readme = "README.md"
python = "^3.7"
homepage = "https://github.com/jtprog/ndenv"
repository = "https://github.com/jtprog/ndenv"
documentation = "https://github.com/jtprog/ndenv"

keywords = ["packaging", "dependency", "infer", "pyproject.toml"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements
[dependencies]
Click = "^7.0"

[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.7" }

[scripts]
poetry = "ndenv.cli:main"

[build-system]
requires = [
    "setuptools >= 44.0.0",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''